tests/ui/recursion/issue-26548-recursion-via-normalize.stderr
error[E0277]: the size for values of type `<S as Mirror>::It` cannot be known at compilation time
  --> $DIR/issue-26548-recursion-via-normalize.rs:14:10
   |
LL | struct S(Option<<S as Mirror>::It>);
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `<S as Mirror>::It`
note: required by a bound in `Option`
  --> $SRC_DIR/core/src/option.rs:LL:COL

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
